--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
 	"name": "@mwni/htproxy",
-	"version": "1.0.0",
+	"version": "1.1.5",
 	"type": "module",
 	"bin": {
 		"htproxy": "./bin/htproxy.js"
 	},
 	"dependencies": {
-		"http-proxy": "^1.18.1"
+		"http-proxy": "^1.18.1",
+		"minimist": "^1.2.6"
 	},
 	"author": "mwni",
 	"license": "ISC",
-	"keywords": ["proxy", "http", "server"]
+	"keywords": [
+		"proxy",
+		"http",
+		"server"
+	]
 }
